[package]
name = "redis-queue-rs"
version = "0.1.3"
edition = "2021"
description = "Redis Queue with sync and async support for Rust"
license = "MIT"
repository = "https://github.com/HideyoshiNakazone/redis-queue-rs.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.2", features = ["aio", "async-std-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
async-std = "1.12.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.115"
